# huginn

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: ci_eval.yaml  runtime.yaml
config/prompts/: answer.txt  rewrite_query.txt  validate_answer.txt
docs/: PLAN.md  local-llamacpp-setup.md  spec.md
scripts/: build_eval_set.py  generate_fixtures.py  preflight.py  run_eval.py  start_llama_servers.py
src/huginn/: __init__.py  cli.py  config.py  preflight.py  schemas.py
src/huginn/answer/: generate.py  validate.py
src/huginn/chunking/: split.py
src/huginn/eval/: dataset.py  metrics.py  report.py
src/huginn/extract/: pdf.py  registry.py
src/huginn/graph/: eval_graph.py  ingest_graph.py  (+1 more)
tests/: __init__.py  helpers.py
tests/e2e/: test_ingest_and_query.py
tests/regression/: test_reingest_skip_unchanged.py
tests/smoke/: test_smoke_pipeline.py
tests/unit/: test_answer_generation.py  test_answer_validation.py  test_chunking.py  test_citations.py  test_discover.py  test_eval_dataset_fixture.py  test_eval_metrics_expanded.py  test_eval_report.py  test_fingerprint.py  test_nomic_prefixes.py  test_openai_client.py  test_pdf_extract.py  test_preflight_checks.py  test_preflight_script.py  test_query_graph_rerank.py  test_query_graph_rewrite.py  test_query_graph_validation.py  test_rerank.py  test_retrieve.py  test_run_eval_script.py  test_runtime_clients.py  test_sqlite_vec_store.py  test_start_llama_servers.py  test_store_reset.py
tests/validation/: test_cli.py  test_config.py  test_extract_validation.py  test_packaging_metadata.py
(+35 files in other folders)
