[project]
name = "huginn"
version = "0.1.0"
description = "Local-first generic document RAG"
requires-python = ">=3.12"
dependencies = [
  "langchain-core>=0.3,<2",
  "langgraph>=0.4,<2",
  "pypdf>=5.4,<7",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0.2,<7",
]

[project.scripts]
huginn = "huginn.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"huginn.store" = ["queries/*.sql", "migrations/*.sql"]
"huginn.retrieve" = ["stopwords.txt"]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
